[tool.poetry]
name = "time-oracle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "time_oracle"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
